force-app/main/default/objects/QR_Scanner_User_Configuration__c/QR_Scanner_User_Configuration__c.object-meta.xml
<CustomObject>
    <label>QR Scanner User Configuration</label>
    <nameField>
        <label>QR Scanner User Configuration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>QR Scanner User Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>