force-app/main/default/objects/QR_Scanner_User_Configuration__c/fields/Configured_Sessions__c.field-meta.xml
<CustomField>
    <fullName>Configured_Sessions__c</fullName>
    <description>Configured Sessions for respective Selected Event</description>
    <inlineHelpText>Configured Sessions</inlineHelpText>
    <label>Configured Sessions</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>