force-app/main/default/objects/QR_Scanner_User_Configuration__c/fields/Current_Session__c.field-meta.xml
<CustomField>
    <fullName>Current_Session__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Current Session in which the user is allocated for Check In Management</description>
    <inlineHelpText>Current Session in which the user is allocated for Check In Management</inlineHelpText>
    <label>Current Session</label>
    <referenceTo>Session__c</referenceTo>
    <relationshipLabel>QR Scanner User Configurations</relationshipLabel>
    <relationshipName>QR_Scanner_User_Configurations</relationshipName>
    <type>Lookup</type>
</CustomField>