force-app/main/default/objects/QR_Scanner_User_Configuration__c/fields/Event__c.field-meta.xml
<CustomField>
    <fullName>Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Event in which the user is assigned for Check In Management</description>
    <inlineHelpText>Event in which the user is assigned for Check In Management</inlineHelpText>
    <label>Event</label>
    <referenceTo>Event__c</referenceTo>
    <relationshipLabel>QR Scanner User Configurations</relationshipLabel>
    <relationshipName>QR_Scanner_User_Configurations</relationshipName>
    <type>Lookup</type>
</CustomField>