force-app/main/default/objects/QR_Scanner_User_Configuration__c/fields/Is_Main_Entrance__c.field-meta.xml
<CustomField>
    <fullName>Is_Main_Entrance__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To denote that the user scanning QR is assigned at main entrance</description>
    <inlineHelpText>To denote that the user scanning QR is assigned at main entrance</inlineHelpText>
    <label>Is Main Entrance</label>
    <type>Checkbox</type>
</CustomField>