force-app/main/default/objects/QR_Scanner_User_Configuration__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User who is using QR Scanner for Check in management</description>
    <inlineHelpText>User who is using QR Scanner for Check in management</inlineHelpText>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>QR_Scanner_User_Configurations</relationshipName>
    <type>Lookup</type>
</CustomField>